Use Java 11
We had planned to use this from the start. Using Java 8 was an
oversight.