@@ -1,4 +1,4 @@
-FROM openjdk:8u222-jdk-slim
+FROM openjdk:11-slim
 
 ARG JAR
 COPY ${JAR} /service.jar
@@ -11,5 +11,5 @@ RUN useradd --groups users \
 USER service-user
 EXPOSE 8080
 EXPOSE 8081
-ENTRYPOINT ["java", "-jar", "/service.jar"]
+ENTRYPOINT ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/service.jar"]
 CMD ["server"]
